--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ergodic Bitcoin Drawdown | How much is enough?</title>
+    <title>StackMath.xyz | Bitcoin Future Planning Done Right</title>
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" />
@@ -46,59 +46,57 @@
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff" />
+
+    <!-- Primary Meta Tags -->
     <meta
       name="title"
-      content="Ergodic Bitcoin Drawdown | Know How Much Is Enough"
+      content="StackMath.xyz | Bitcoin Future Planning Done Right"
     />
     <meta
       name="description"
-      content="Using a Monte Carlo Simulator to project any potential Bitcoin future, determine how much Bitcoin you will need and by when to have enough."
+      content="Professional-grade Monte Carlo simulation for Bitcoin stack planning. Calculate exactly how much Bitcoin you need for your future, with real-world probabilities."
+    />
+    <meta
+      name="keywords"
+      content="bitcoin calculator, bitcoin retirement, bitcoin monte carlo, stack sats, bitcoin future planning, bitcoin simulation"
     />
 
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://gildedpleb.github.io/ergodic-drawdown"
-    />
+    <meta property="og:url" content="https://stackmath.xyz" />
     <meta
       property="og:title"
-      content="Ergodic Bitcoin Drawdown | Know How Much Is Enough"
+      content="StackMath.xyz | Bitcoin Future Planning Done Right"
     />
     <meta
       property="og:description"
-      content="Using a Monte Carlo Simulator to project any potential Bitcoin future, determine how much bitcoin you will need and by when to have enough."
+      content="Professional-grade Monte Carlo simulation for Bitcoin stack planning. Move beyond simple calculators - model your Bitcoin future with real probabilities."
     />
-    <meta
-      property="og:image"
-      content="https://gildedpleb.github.io/ergodic-drawdown/image.png"
-    />
+    <meta property="og:image" content="https://stackmath.xyz/image.png" />
     <meta
       property="og:image:alt"
-      content="Visualization of Bitcoin drawdown and recovery scenarios using Monte Carlo simulation."
+      content="StackMath.xyz Bitcoin Monte Carlo simulation dashboard"
     />
 
+    <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta
-      property="twitter:url"
-      content="https://gildedpleb.github.io/ergodic-drawdown"
-    />
-    <meta
-      property="twitter:title"
-      content="Ergodic Bitcoin Drawdown | Know How Much Is Enough"
-    />
+    <meta property="twitter:url" content="https://stackmath.xyz" />
+    <meta property="twitter:title" content="StackMath.xyz | Stack Smarter" />
     <meta
       property="twitter:description"
-      content="Using a Monte Carlo Simulator to project any potential Bitcoin future, determine how much bitcoin you will need and by when to have enough."
+      content="Professional-grade Monte Carlo simulation for Bitcoin stack planning. Move beyond simple calculators - model your Bitcoin future with real probabilities."
     />
-    <meta
-      property="twitter:image"
-      content="https://gildedpleb.github.io/ergodic-drawdown/image.png"
-    />
+    <meta property="twitter:image" content="https://stackmath.xyz/image.png" />
     <meta
       property="twitter:image:alt"
-      content="Visualization of Bitcoin drawdown and recovery scenarios using Monte Carlo simulation."
+      content="StackMath.xyz Bitcoin Monte Carlo simulation dashboard"
     />
     <meta property="twitter:creator" content="@gildedpleb" />
+
+    <!-- Additional SEO -->
+    <link rel="canonical" href="https://stackmath.xyz" />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="GildedPleb" />
   </head>
   <body>
     <div id="root"></div>
