--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      StackMath.xyz | The Bitcoin Price and Drawdown Modeling Engine
-    </title>
+    <title>StackMath.xyz | The Bitcoin Modeling Engine</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -13,10 +11,7 @@
     <meta name="theme-color" content="#ffffff" />
 
     <!-- Primary Meta Tags -->
-    <meta
-      name="title"
-      content="StackMath.xyz | The Bitcoin Price and Drawdown Modeling Engine"
-    />
+    <meta name="title" content="StackMath.xyz | The Bitcoin Modeling Engine" />
     <meta
       name="description"
       content="Professional-grade ergodic Monte Carlo simulation for Bitcoin price and stack planning. Map thousands of possible futures and calculate precise probabilities for financial goals."
@@ -31,11 +26,11 @@
     <meta property="og:url" content="https://stackmath.xyz" />
     <meta
       property="og:title"
-      content="StackMath.xyz | The Bitcoin Price and Drawdown Modeling Engine"
+      content="StackMath.xyz | The Bitcoin Modeling Engine"
     />
     <meta
       property="og:description"
-      content="Professional-grade Monte Carlo simulation for Bitcoin stack planning. Move beyond simple calculators - model your Bitcoin future with probabilities."
+      content="Professional-grade ergodic Monte Carlo simulation for Bitcoin price and stack planning. Map thousands of possible futures and calculate precise probabilities for financial goals."
     />
     <meta property="og:image" content="https://stackmath.xyz/image.png" />
     <meta
@@ -48,11 +43,11 @@
     <meta property="twitter:url" content="https://stackmath.xyz" />
     <meta
       property="twitter:title"
-      content="StackMath.xyz | The Bitcoin Price and Drawdown Modeling Engine"
+      content="StackMath.xyz | The Bitcoin Modeling Engine"
     />
     <meta
       property="twitter:description"
-      content="Professional-grade Monte Carlo simulation for Bitcoin stack planning. Move beyond simple calculators - model your Bitcoin future with probabilities."
+      content="Professional-grade ergodic Monte Carlo simulation for Bitcoin price and stack planning. Map thousands of possible futures and calculate precise probabilities for financial goals."
     />
     <meta property="twitter:image" content="https://stackmath.xyz/image.png" />
     <meta
